crucible-concurrency/examples/cbl/threads.out.good
[Crux] Attempting to prove verification conditions.
[Crux] Found counterexample for verification goal
[Crux]   examples/cbl/threads.cbl:11:5: error: in main
[Crux]   Positive counter
